# slacker

./: CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json
hooks/: pre-commit
slacker/: .env.example  .gitignore  pyproject.toml
slacker/.claude-plugin/: plugin.json
slacker/commands/: setup.md
slacker/scripts/: run_slack.py
slacker/skills/slack/: SKILL.md
