[project]
name = "slacker"
version = "1.6.0"
description = "Slack SDK code-mode runner for Claude Code"
requires-python = ">=3.11"
readme = {text = "", content-type = "text/plain"}
authors = [
    { name = "Saurabh Nandedkar" }
]
dependencies = [
    "slack-sdk>=3.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
